Fix #7290 - Overlapping of icons/labels on Firefox

--- a/src/sass/_browser.scss
+++ b/src/sass/_browser.scss
@@ -101,11 +101,6 @@
         top: -2px;
     }
     .pm_labels.inline label { }
-    #conversation-view .message > div.summary,
-    #conversation-view .message > div.summary .time .fa-paperclip {
-        line-height: 34px;
-        height: 34px;
-    }
     .pm_table th .pm_button, .pm_table td .pm_button {
         line-height: 36px;
     }
